# dbt-hook

./: .pre-commit-hooks.yaml  setup.cfg
dbt_rebalance_check/: main.py  tracking.py
dbt_rebalance_check.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
