# setup.cfg
[metadata]
name = dbt_rebalance_check
description = print the arguments you pass
version = 0.1.0
author = Prashant Malhotra
author_email = prashantmalhotra462@gmail.com
license = MIT
url = https://jorgealvarado.me

[options]
packages = find:
install_requires =
    mixpanel
    pyyaml


[options.entry_points]
console_scripts =
    dbt_rebalance_check = dbt_rebalance_check.main:main